--- a/index.html
+++ b/index.html
@@ -37,22 +37,22 @@ frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media
 </div>
 
 <div class="image-grid"><br>
-  <img src="/Users/kristerandersen/Desktop/Kreativt/Portfolio/IMG_4016.jpg" alt="famous" width="500" height="auto">
-  <img src="/Users/kristerandersen/Desktop/Kreativt/Portfolio/20220627_005853.jpg" alt="sinna" width="483" height="auto">
-  <img src="/Users/kristerandersen/Desktop/Kreativt/Portfolio/20220627_002809 (1).jpg" alt="dressur" width="500" height="auto">
-  <img src="/Users/kristerandersen/Desktop/Kreativt/Portfolio/LRM_EXPORT_16345598473106_20190402_150302316.jpeg" alt="Mathilde" width="503" height="auto"><br>
-  <img src="/Users/kristerandersen/Desktop/Kreativt/Portfolio/IMG_0259.jpg" alt="busstopp" width="445" height="auto">
-  <img src="/Users/kristerandersen/Desktop/Kreativt/Portfolio/20210308_140714.jpg" alt="speil" width="500" height="auto">
-  <img src="/Users/kristerandersen/Desktop/Kreativt/Portfolio/20201018_163207.jpg" alt="Miniatyr" width="380" height="auto">
-  <img src="/Users/kristerandersen/Desktop/Kreativt/Portfolio/20210925_231227.jpg" alt="hobo" width="300" height="auto">
-  <img src="/Users/kristerandersen/Desktop/Kreativt/Portfolio/20210829_212802.jpg" alt="candy crush" width="360" height="auto">
-  <img src="/Users/kristerandersen/Desktop/Kreativt/Portfolio/20210226_152146.jpg" alt="legs" width="350" height="auto">
-  <img src="/Users/kristerandersen/Desktop/Kreativt/Portfolio/20221008_190607.jpg" alt="HMI" width="400" height="auto">
-  <img src="/Users/kristerandersen/Desktop/Kreativt/Portfolio/20190502_003629.jpg" alt="Alfheim" width="500" height="auto">
-  <img src="/Users/kristerandersen/Desktop/Kreativt/Portfolio/20220628_022037 (1).jpg" alt="paraply" width="400" height="auto">
-  <img src="/Users/kristerandersen/Desktop/Kreativt/Portfolio/20210608_175548.jpg" alt="kikkert" width="400" height="auto">
-  <img src="/Users/kristerandersen/Desktop/Kreativt/Portfolio/LRM_EXPORT_1020357713055902_20190917_222008221.jpeg" alt="Persienne" width="400" height="auto">
-  <img src="/Users/kristerandersen/Desktop/Kreativt/Portfolio/LRM_EXPORT_495922951987632_20190308_220706853.jpeg" alt="flyben" width="500" height="auto">
+  <img src="IMG_4016.jpg" alt="famous" width="500" height="auto">
+  <img src="20220627_005853.jpg" alt="sinna" width="483" height="auto">
+  <img src="20220627_002809 (1).jpg" alt="dressur" width="500" height="auto">
+  <img src="LRM_EXPORT_16345598473106_20190402_150302316.jpeg" alt="Mathilde" width="503" height="auto"><br>
+  <img src="IMG_0259.jpg" alt="busstopp" width="445" height="auto">
+  <img src="20210308_140714.jpg" alt="speil" width="500" height="auto">
+  <img src="20201018_163207.jpg" alt="Miniatyr" width="380" height="auto">
+  <img src="20210925_231227.jpg" alt="hobo" width="300" height="auto">
+  <img src="20210829_212802.jpg" alt="candy crush" width="360" height="auto">
+  <img src="20210226_152146.jpg" alt="legs" width="350" height="auto">
+  <img src="20221008_190607.jpg" alt="HMI" width="400" height="auto">
+  <img src="20190502_003629.jpg" alt="Alfheim" width="500" height="auto">
+  <img src="20220628_022037 (1).jpg" alt="paraply" width="400" height="auto">
+  <img src="20210608_175548.jpg" alt="kikkert" width="400" height="auto">
+  <img src="LRM_EXPORT_1020357713055902_20190917_222008221.jpeg" alt="Persienne" width="400" height="auto">
+  <img src="LRM_EXPORT_495922951987632_20190308_220706853.jpeg" alt="flyben" width="500" height="auto">
 </div>
 
 </body>
