flytta på bildegrid

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media
 <span class="body">Klipp: Vegard Billing </span><br>
 <span class="body">Post-lyd: Ole Torstein Hovig </span>
 </div>
-
+</div>
 <div class="image-grid"><br>
   <img src="IMG_4016.jpg" alt="famous" width="500" height="auto">
   <img src="20220627_005853.jpg" alt="sinna" width="483" height="auto">
