mindre tittel, thumbnailjustering

--- a/index.html
+++ b/index.html
@@ -6,17 +6,20 @@
 </head>
 <body>
 <h3><span class="kontakt">KRISTER.H.ANDERSEN@GMAIL.COM</span></h3>
-<h1><span class="tittel">KRISTER HAMMER ANDERSEN</span></h1>
+<h1><span class="tittel">KRISTER <br>HAMMER ANDERSEN</span></h1>
 <div class="scroll-left"><span class="body">
   <p>REGISSØR - MANUSFORFATTER - KLIPPER - (FILM)FOTOGRAF - EKLEKT - TROMSØVÆRING - POINT GUARD - MØBELSNEKKER - SØNN - IKON - MENNESKE</p> </span>
   </div>
 
 <div class="enkleremåte">
-<iframe width="820" height="422" src="https://www.youtube.com/embed/QifvhBPkFK0" title="YouTube video player" 
-frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <video width="820" height="422" poster="vlcsnap-2022-01-07-15h34m42s513.png" controls>
+    <source src="reddbarna.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+  </video>
+</div>
 </div>
 
-<div class="reddbarnamedbrødtekst">
+<div class="reddbarnabrødtekst">
 <span class="body">Regi og Manus: Krister Hammer Andersen</span><br>
 <span class="body">Produsent: Vegard Billing og Maria Simonsen</span><br>
 <span class="body">DP og grade:Jesper Edwin Vigander</span><br>
@@ -55,9 +58,6 @@ frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media
   <img src="20220628_022037 (1).jpg" alt="paraply" width="600" height="auto"><br>
   <br><img src="20210608_175548.jpg" alt="kikkert" width="400" height="auto"><br>
   <img src="LRM_EXPORT_1020357713055902_20190917_222008221.jpeg" alt="Persienne" width="400" height="auto">
-
-
-  
 </div>
 
 </body>
