lagt til meny, og underkategorier

--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 <HTML>
 <head>
     <Title> Krister Hammer Andersen</Title>
-<link rel="stylesheet" href="./main.css"
+<link rel="stylesheet" href="./main.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="author" content="Krister Hammer Andersen">
 </head>
 <body>
-<h3><span class="kontakt">KRISTER.H.ANDERSEN@GMAIL.COM</span></h3>
+<h3><span class="kontakt">KRISTER.H.ANDERSEN@GMAIL.COM </span></h3>
 <h1><span class="tittel">KRISTER <br>HAMMER ANDERSEN</span></h1>
-<div class="scroll-left"><span class="body">
-  <p>REGISSØR - MANUSFORFATTER - KLIPPER - (FILM)FOTOGRAF - EKLEKT - TROMSØVÆRING - POINT GUARD - MØBELSNEKKER - SØNN - IKON - MENNESKE</p> </span>
+<div class="meny"><span class="body">
+  <p><a href="regissør.html">REGISSØR</a> - <a href="forfatter.html"> (MANUS)FORFATTER </a> - 
+    <a href="klipper.html">KLIPPER</a> - <a href="fotograf.html">(FILM)FOTOGRAF</a> - <a href="grafiskdesigner.html">GRAFISK DESIGNER</a>
+     - <a href="https://www.instagram.com/krister0/">INFLUENSER</a> - <a href="https://goo.gl/maps/Xd2j42wzSduBuhFz9"> TROMSØVÆRING</a> - POINT GUARD </p> </span>
   </div>
 
 <div class="enkleremåte">
@@ -28,8 +32,10 @@
 </div>
 
 <div class="midnattsol">
-    <iframe width="820" height="422" src="https://www.youtube.com/embed/LkzXeaQ1OM4" title="YouTube video player" frameborder="0" 
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <video width="820" height="422" poster="postermidnatt.jpg" controls>
+          <source src="midnattsol.mp4" type="video/mp4">
+        </video>
+</div>
 
     <div class="midnattsolbrødtekst">
 <span class="body">Regi og Mannus: Krister Hammer Andersen</span><br>
@@ -38,27 +44,26 @@
 <span class="body">Klipp: Vegard Billing </span><br>
 <span class="body">Lyd: Ole Torstein Hovig og Haakon Løkka </span>
 </div>
-</div>
 <div class="image-grid">
-  <img src="IMG_4016.jpg" alt="famous" width="500" height="auto">
-  <img src="20220627_005853.jpg" alt="sinna" width="483" height="auto">
-  <img src="20220627_002809 (1).jpg" alt="dressur" width="500" height="auto">
-  <img src="LRM_EXPORT_16345598473106_20190402_150302316.jpeg" alt="Mathilde" width="503" height="auto"><br>
-  <img src="IMG_0259.jpg" alt="busstopp" width="445" height="auto">
-  <img src="LRM_EXPORT_83339671278611_20190405_094047632.jpg" alt="Wes" width="630" height="auto">
-  <img src="20210308_140714.jpg" alt="speil" width="500" height="auto">
-  <img src="IMG_9901-Edit.jpg" alt="drage" width="420" height="auto">
-  <img src="LRM_EXPORT_495922951987632_20190308_220706853.jpeg" alt="flyben" width="500" height="auto">
-  <img src="20210829_212802.jpg" alt="candy crush" width="400" height="auto">
-  <img src="20201018_163207.jpg" alt="Miniatyr" width="380" height="auto">
-  <img src="20210925_231227.jpg" alt="hobo" width="400" height="auto">
-  <img src="20210226_152146.jpg" alt="legs" width="350" height="auto">
-  <img src="20221008_190607.jpg" alt="HMI" width="400" height="auto">
-  <img src="20190502_003629.jpg" alt="Alfheim" width="500" height="auto">
-  <img src="20220628_022037 (1).jpg" alt="paraply" width="600" height="auto"><br>
-  <br><img src="20210608_175548.jpg" alt="kikkert" width="400" height="auto"><br>
-  <img src="LRM_EXPORT_1020357713055902_20190917_222008221.jpeg" alt="Persienne" width="400" height="auto">
-</div>
+    <img src="IMG_4016.jpg" alt="famous" width="500" height="auto">
+    <img src="20220627_005853.jpg" alt="sinna" width="483" height="auto">
+    <img src="20220627_002809 (1).jpg" alt="dressur" width="500" height="auto">
+    <img src="LRM_EXPORT_16345598473106_20190402_150302316.jpeg" alt="Mathilde" width="503" height="auto"><br>
+    <img src="IMG_0259.jpg" alt="busstopp" width="445" height="auto">
+    <img src="LRM_EXPORT_83339671278611_20190405_094047632.jpg" alt="Wes" width="630" height="auto">
+    <img src="20210308_140714.jpg" alt="speil" width="500" height="auto">
+    <img src="IMG_9901-Edit.jpg" alt="drage" width="420" height="auto">
+    <img src="LRM_EXPORT_495922951987632_20190308_220706853.jpeg" alt="flyben" width="500" height="auto">
+    <img src="20210829_212802.jpg" alt="candy crush" width="400" height="auto">
+    <img src="20201018_163207.jpg" alt="Miniatyr" width="380" height="auto">
+    <img src="20210925_231227.jpg" alt="hobo" width="400" height="auto">
+    <img src="20210226_152146.jpg" alt="legs" width="350" height="auto">
+    <img src="20221008_190607.jpg" alt="HMI" width="400" height="auto">
+    <img src="20190502_003629.jpg" alt="Alfheim" width="500" height="auto">
+    <img src="20220628_022037 (1).jpg" alt="paraply" width="600" height="auto"><br>
+    <br><img src="20210608_175548.jpg" alt="kikkert" width="400" height="auto"><br>
+    <img src="LRM_EXPORT_1020357713055902_20190917_222008221.jpeg" alt="Persienne" width="400" height="auto">
+  </div>
 
 </body>
 </html>
