--- a/klipper.html
+++ b/klipper.html
@@ -4,7 +4,7 @@
     <Title> Klipper</Title>
 <style>
     body {margin: 0;
-    background-color: #040404}
+    background-color: #000000}
     span.body {font-kerning: none;font: 13.0px 'helvetica'; color: #ffff}
   span.fagfunk {font: 11.0px 'Helvetica'; font-kerning: none; color: #ffff}
   span.tittel {font-kerning: none;font: 40.0px 'HELVETICA'; color: #ffff; margin-left: 10%; margin-top: 10px;}
@@ -32,8 +32,8 @@
   }
   .meny {
   position: relative;
-  top: 5px;
-  left: 50%;
+  top: 0px;
+  left: 25%;
   }
 
 
@@ -46,7 +46,7 @@
     <h3><span class="kontakt">KRISTER.H.ANDERSEN@GMAIL.COM </span></h3>
     <h1><span class="tittel"><a href="index.html">KRISTER <br>HAMMER ANDERSEN</a></span></h1>
     <div class="meny"><span class="body">
-        <p><a href="regissør.html">REGISSØR</a> - <a href="forfatter.html"> (MANUS)FORFATTER </a> - <a href="klipper.html">KLIPPER</a> - <a href="fotograf.html">(FILM)FOTOGRAF</a> - <a href="grafiskdesigner.html">GRAFISK DESIGNER</a> - <a href="https://www.instagram.com/krister0/">INFLUENSER</a> - TROMSØVÆRING - POINT GUARD </p> </span>
+        <p><a href="regissør.html">REGISSØR</a> - <a> (MANUS)FORFATTER </a> - <a href="klipper.html">KLIPPER</a> - <a href="fotograf.html">(FILM)FOTOGRAF</a> - <a>GRAFISK DESIGNER</a> - <a href="https://www.instagram.com/krister0/">INFLUENSER</a> - TROMSØVÆRING - POINT GUARD </p> </span>
         </div>
 
         <video width="820" height="422" controls>
