Lagt til begynnelse på forfatterskap

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <h3><span class="kontakt">KRISTER.H.ANDERSEN@GMAIL.COM </span></h3>
 <h1><span class="tittel">KRISTER <br>HAMMER ANDERSEN</span></h1>
 <div class="meny"><span class="body">
-  <p><a href="regissør.html">REGISSØR</a> - <a> (MANUS)FORFATTER </a> - 
+  <p><a href="regissør.html">REGISSØR</a> - <a href="forfatter.html"> (MANUS)FORFATTER </a> - 
     <a href="klipper.html">KLIPPER</a> - <a href="fotograf.html">(FILM)FOTOGRAF</a> - <a>GRAFISK DESIGNER</a>
      - <a href="https://www.instagram.com/krister0/">INFLUENSER</a> - <a href="https://goo.gl/maps/Xd2j42wzSduBuhFz9"> TROMSØVÆRING</a> - POINT GUARD </p> </span>
   </div>
