--- a/regissør.html
+++ b/regissør.html
@@ -10,7 +10,7 @@
     <h3><span class="kontakt">KRISTER.H.ANDERSEN@GMAIL.COM </span></h3>
     <h1><span class="tittel"><a href="index.html">KRISTER <br>HAMMER ANDERSEN</a></span></h1>
     <div class="meny"><span class="body">
-        <p><a href="regissør.html">REGISSØR</a> - <a> (MANUS)FORFATTER </a> - <a href="klipper.html">KLIPPER</a> - <a href="fotograf.html">(FILM)FOTOGRAF</a> - <a>GRAFISK DESIGNER</a> - <a href="https://www.instagram.com/krister0/">INFLUENSER</a> - TROMSØVÆRING - POINT GUARD </p> </span>
+        <p><a href="regissør.html">REGISSØR</a> - <a href="forfatter.html"> (MANUS)FORFATTER </a> - <a href="klipper.html">KLIPPER</a> - <a href="fotograf.html">(FILM)FOTOGRAF</a> - <a>GRAFISK DESIGNER</a> - <a href="https://www.instagram.com/krister0/">INFLUENSER</a> - TROMSØVÆRING - POINT GUARD </p> </span>
         </div>
 
         <div class="enkleremåte">
