--- a/regissør.html
+++ b/regissør.html
@@ -37,7 +37,7 @@
           </div>
           
               <div class="midnattsolbrødtekst">
-          <span class="body">Regi og Mannus: Krister Hammer Andersen</span><br>
+          <span class="body">Regi og Manus: Krister Hammer Andersen</span><br>
           <span class="body">Produsent: Maria Simonsen</span><br>
           <span class="body">DP og grade: Jesper Edwin Vigander</span><br>
           <span class="body">Klipp: Vegard Billing </span><br>
