--- a/forfatter.html
+++ b/forfatter.html
@@ -13,7 +13,7 @@
         <p><a href="regissør.html">REGISSØR</a> - <a href="forfatter.html"> (MANUS)FORFATTER </a> - <a href="klipper.html">KLIPPER</a> - <a href="fotograf.html">(FILM)FOTOGRAF</a> - <a>GRAFISK DESIGNER</a> - <a href="https://www.instagram.com/krister0/">INFLUENSER</a> - TROMSØVÆRING - POINT GUARD </p> </span>
         </div>
 
-<img src="vrakrester.png" alt="vrakrester" class="vrakrester">        
+<img src="Vrakrester.png" alt="vrakrester" class="vrakrester">        
 
 
 
