endret klippeside, satsfilm

--- a/forfatter_eng.html
+++ b/forfatter_eng.html
@@ -11,7 +11,7 @@
     <h1><span class="tittel"><a href="index_eng.html">KRISTER <br>HAMMER ANDERSEN</a></span></h1>
     <div class="meny"><span class="body">
       <p><a href="regissør_eng.html">DIRECTOR</a> - <a href="forfatter_eng.html"> (SCREEN)WRITER </a> - 
-        <a href="klipper_eng.html">EDITOR</a> - <a href="fotograf_eng.html">CINEMA-/PHOTOGRAPHER</a> - <a>GRAPHIC DESIGN</a>
+        <a href="klipper_eng.html">EDITOR</a> - <a href="fotograf_eng.html">CINEMA-/PHOTOGRAPHER</a> - <a>GRAPHIC DESIGNER</a>
          - <a href="https://www.instagram.com/krister0/">INFLUENCER</a> - <a href="https://goo.gl/maps/Xd2j42wzSduBuhFz9"> TROMSØVÆRING</a> - POINT GUARD </p> </span>
       </div>
 
