--- a/fotograf_eng.html
+++ b/fotograf_eng.html
@@ -72,7 +72,7 @@ gap: var(--gap);
     <h1><span class="tittel"><a href="index_eng.html">KRISTER <br>HAMMER ANDERSEN</a></span></h1>
     <div class="meny"><span class="body">
       <p><a href="regissør_eng.html">DIRECTOR</a> - <a href="forfatter_eng.html"> (SCREEN)WRITER </a> - 
-        <a href="klipper_eng.html">EDITOR</a> - <a href="fotograf_eng.html">CINEMA-/PHOTOGRAPHER</a> - <a>GRAPHIC DESIGN</a>
+        <a href="klipper_eng.html">EDITOR</a> - <a href="fotograf_eng.html">CINEMA-/PHOTOGRAPHER</a> - <a>GRAPHIC DESIGNER</a>
          - <a href="https://www.instagram.com/krister0/">INFLUENCER</a> - <a href="https://goo.gl/maps/Xd2j42wzSduBuhFz9"> TROMSØVÆRING</a> - POINT GUARD </p> </span>
       </div>
 <div class="edit">
@@ -90,12 +90,10 @@ gap: var(--gap);
           <img src="LRM_EXPORT_83339671278611_20190405_094047632.jpg" alt="Wes" width="630" height="auto">
           <img src="20210308_140714.jpg" alt="speil" width="500" height="auto">
           <img src="IMG_9901-Edit.jpg" alt="drage" width="420" height="auto">
+          <img src="20210311_091256.jpg" alt="anna" width="350" height="auto">
           <img src="LRM_EXPORT_495922951987632_20190308_220706853.jpeg" alt="flyben" width="500" height="auto">
-          <img src="20210829_212802.jpg" alt="candy crush" width="400" height="auto">
-          <img src="20201018_163207.jpg" alt="Miniatyr" width="380" height="auto">
           <img src="20210925_231227.jpg" alt="hobo" width="400" height="auto">
           <img src="20210226_152146.jpg" alt="legs" width="350" height="auto">
-          <img src="20221008_190607.jpg" alt="HMI" width="400" height="auto">
           <img src="20190502_003629.jpg" alt="Alfheim" width="500" height="auto">
           <img src="20220628_022037 (1).jpg" alt="paraply" width="600" height="auto"><br>
           <br><img src="20210608_175548.jpg" alt="kikkert" width="400" height="auto"><br>
