Fylt opp klippeside, endret forfatterskap

--- a/forfatter_eng.html
+++ b/forfatter_eng.html
@@ -15,7 +15,7 @@
          - <a href="https://www.instagram.com/krister0/">INFLUENCER</a> - <a href="https://goo.gl/maps/Xd2j42wzSduBuhFz9"> TROMSØVÆRING</a> - POINT GUARD </p> </span>
       </div>
 
-<img src="Vrakrester.png" alt="vrakrester" class="vrakrester">        
+<img src="Vrakrester_eng.png" alt="shipwreck" class="vrakrester" style="width:900px;margin-top:100px;margin-left:50px;">        
 
 
 
