--- a/fotograf.html
+++ b/fotograf.html
@@ -54,12 +54,21 @@ gap: var(--gap);
 }
 
 .image-grid > img {
+  position: relative;
   width: 300px;
+  top: 200px;
     height: auto;
     object-fit: fill;
 }
 .edit{
   position: relative;
+  left: 250px;
+  top: 180px;
+    object-fit: fill;
+}
+.satsnorge5{
+  position: relative;
+  top: 75px;
   left: 250px;
     object-fit: fill;
 }
@@ -74,6 +83,13 @@ gap: var(--gap);
         <p><a href="regissør.html">REGISSØR</a> - <a href="forfatter.html"> (MANUS)FORFATTER </a> - <a href="klipper.html">KLIPPER</a> - <a href="fotograf.html">(FILM)FOTOGRAF</a> - 
           <a>GRAFISK DESIGNER</a> - <a href="https://www.instagram.com/krister0/">INFLUENSER</a> - TROMSØVÆRING - POINT GUARD </p> </span>
         </div>
+
+        <div class="satsnorge5">
+          <video width="820" height="422" controls>
+              <source src="SATS_12_Uker_EP5_IG_NO.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+            </video>
+          </div>
 <div class="edit">
         <video width="820" height="422" controls>
             <source src="house 2022_16x9lowqual.mp4" type="video/mp4">
