--- a/forfatter.html
+++ b/forfatter.html
@@ -13,7 +13,9 @@
         <p><a href="regissør.html">REGISSØR</a> - <a href="forfatter.html"> (MANUS)FORFATTER </a> - <a href="klipper.html">KLIPPER</a> - <a href="fotograf.html">(FILM)FOTOGRAF</a> - <a>GRAFISK DESIGNER</a> - <a href="https://www.instagram.com/krister0/">INFLUENSER</a> - TROMSØVÆRING - POINT GUARD </p> </span>
         </div>
 
-<img src="Vrakrester.png" alt="vrakrester" class="vrakrester">        
+<div class="tviledikt"><img src="tviledikt.png" alt="tviledikt" style="width:400px"></div>
+
+<img src="Vrakrester.png" alt="vrakrester" class="vrakrester" style="width:900px;margin-top:100px;margin-left:50px;">        
 
 
 
