--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <a href="klipper.html">KLIPPER</a> - <a href="fotograf.html">(FILM)FOTOGRAF</a> - <a>GRAFISK DESIGNER</a>
      - <a href="https://www.instagram.com/krister0/">INFLUENSER</a> - <a href="https://goo.gl/maps/Xd2j42wzSduBuhFz9"> TROMSØVÆRING</a> - POINT GUARD </p> </span>
   </div>
- <div class="showr"> <img src="powerpoint.gif.gif "minishowreel" style="width:500px;height:auto;">
+ <div class="showr"> <img src="powerpoint.gif.gif" alt="minishowreel" style="width:500px;height:auto;">
  </div>
 </body>
 </html>
