la til Svalestup og Bream video

--- a/klipper.html
+++ b/klipper.html
@@ -38,30 +38,30 @@
 
   .Satsbrødtekst {
   position: absolute;
-  top: 260px;
+  top: 860px;
   left: 50px;
   text-align: left;
   }
 
  .satsnorge1 {
     position: absolute;
-    top: 250px;
+    top: 850px;
     left: 350px;
     }
     .satssverige1 {
     position: absolute;
-    top: 250px;
+    top: 850px;
     left: 750px;
     }
 
     .satsnorgehighlight {
       position: absolute;
-      top: 250px;
+      top: 850px;
       left: 1150px;
       }
       .satssverigehighlight {
       position: absolute;
-      top: 250px;
+      top: 850px;
       left: 1550px;
       }
       .IKEAbrødtekst {
@@ -98,6 +98,10 @@
     <div class="meny"><span class="body">
         <p><a href="regissør.html">REGISSØR</a> - <a href="forfatter.html"> (MANUS)FORFATTER </a> - <a href="klipper.html">KLIPPER</a> - <a href="fotograf.html">(FILM)FOTOGRAF</a> - <a>GRAFISK DESIGNER</a> - <a href="https://www.instagram.com/krister0/">INFLUENSER</a> - TROMSØVÆRING - POINT GUARD </p> </span>
         </div>
+
+        <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/887038468?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" style="position:absolute;top:0;left:0;width:60%;height:60%;" title="Bream à Paris"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+
+
        <div class="Satsbrødtekst"> <span class="body"><p><b>2/10 episoder fra SATS PT-kampanje <br>
         + utdrag til SoMe(2023)</b>
         <br> Kreatør: Ole-Jacob Steen-Hansen <br> Regi: Nada Bojic <br> Prod: Mari Paus & Ida Hindrum  <br> Grafikk: Andreas Aas <br> Klipp: Krister Hammer Andersen <br> Byrå: TRY Film <br> Resten av serien kan sees på <a href="https://www.instagram.com/p/Cv9LrIJq1dl/"> SATS' Instagram</a>
