--- a/regissør.html
+++ b/regissør.html
@@ -5,6 +5,36 @@
   <link rel="stylesheet" href="./main.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="author" content="Krister Hammer Andersen">
+<style>
+    .svalestup {
+    position: relative;
+    top: 0px;
+    left: 500px;
+    }
+  .enkleremåte {
+    position: relative;
+    top: 700px;
+    left: 500px;
+    }
+
+   .reddbarnabrødtekst {
+    position: relative;
+  top: 100px;
+  right: 1020px;
+  text-align: right;
+  }
+
+.midnattsol {
+  position: relative;
+  top: 300px;
+  left: 500px;
+  }
+  .midnattsolbrødtekst {
+  position: relative;
+  top: 0px;
+  left: 1150px;
+  text-align: left;
+  }</style>
 </head>
 <body>
     <h3><span class="kontakt">KRISTER.H.ANDERSEN@GMAIL.COM </span></h3>
@@ -21,6 +51,12 @@
           </div>
           </div>
           
+          <div class="svalestup">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/AEHC7gae9cw?si=pBbAYBh9Mro1-_cE" 
+          title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media;
+           gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          </div>
+
           <div class="reddbarnabrødtekst">
           <span class="body">Regi og Manus: Krister Hammer Andersen</span><br>
           <span class="body">Produsent: Vegard Billing og Maria Simonsen</span><br>
