Oppdatert stil og lagt til null47-greier

--- a/forfatter.html
+++ b/forfatter.html
@@ -10,12 +10,11 @@
     <h3><span class="kontakt">KRISTER.H.ANDERSEN@GMAIL.COM </span></h3>
     <h1><span class="tittel"><a href="index.html">KRISTER <br>HAMMER ANDERSEN</a></span></h1>
     <div class="meny"><span class="body">
-        <p><a href="regissør.html">REGISSØR</a> - <a href="forfatter.html"> (MANUS)FORFATTER </a> - <a href="klipper.html">KLIPPER</a> - <a href="fotograf.html">(FILM)FOTOGRAF</a> - <a>GRAFISK DESIGNER</a> - <a href="https://www.instagram.com/krister0/">INFLUENSER</a> - TROMSØVÆRING - POINT GUARD </p> </span>
-        </div>
-
-<div class="tviledikt"><img src="tviledikt.png" alt="tviledikt" style="width:400px"></div>
-
-<img src="Vrakrester.png" alt="vrakrester" class="vrakrester" style="width:900px;margin-top:100px;margin-left:50px;">        
+      <p><a href="regissør.html">REGISSØR</a> - <a> (MANUS)FORFATTER </a> 
+        - <a href="klipper.html">KLIPPER</a> - <a>(FILM)FOTOGRAF</a> 
+        - <a>GRAFISK DESIGNER</a>
+         - <a href="https://www.instagram.com/krister0/">INFLUENSER</a> 
+         - <a href="https://goo.gl/maps/Xd2j42wzSduBuhFz9"> TROMSØVÆRING</a>   </div>
 
 
 
