--- a/index_eng.html
+++ b/index_eng.html
@@ -12,11 +12,9 @@
 <h3><span class="eng"><a href="index.html">NOR</a></span></h3>
 <h1><span class="tittel">KRISTER <br>HAMMER ANDERSEN</span></h1>
 <div class="meny"><span class="body">
-  <p><a href="regissør_eng.html">DIRECTOR</a> - <a href="forfatter_eng.html"> (SCREEN)WRITER </a> - 
-    <a href="klipper_eng.html">EDITOR</a> - <a href="fotograf_eng.html">CINEMA-/PHOTOGRAPHER</a> - <a>GRAPHIC DESIGNER</a>
+  <p><a href="regissør.html">DIRECTOR</a> - <a> (SCREEN)WRITER </a> - 
+    <a href="klipper.html">EDITOR</a> - <a>CINEMA-/PHOTOGRAPHER</a> - <a>GRAPHIC DESIGNER</a>
      - <a href="https://www.instagram.com/krister0/">INFLUENCER</a> - <a href="https://goo.gl/maps/Xd2j42wzSduBuhFz9"> TROMSØVÆRING</a> - POINT GUARD </p> </span>
   </div>
- <div class="showr"> <img src="powerpoint.gif.gif "minishowreel" style="width:500px;height:auto;">
- </div>
 </body>
 </html>
