--- a/index.html
+++ b/index.html
@@ -9,14 +9,20 @@
 
 <body>
 <h3><span class="kontakt">KRISTER.H.ANDERSEN@GMAIL.COM </span></h3>
-<h3><span class="eng"><a href="index_eng.html">ENG</a></span></h3>
+
 <h1><span class="tittel">KRISTER <br>HAMMER ANDERSEN</span></h1>
+
+
 <div class="meny"><span class="body">
-  <p><a href="regissør.html">REGISSØR</a> - <a href="forfatter.html"> (MANUS)FORFATTER </a> - 
-    <a href="klipper.html">KLIPPER</a> - <a href="fotograf.html">(FILM)FOTOGRAF</a> - <a>GRAFISK DESIGNER</a>
-     - <a href="https://www.instagram.com/krister0/">INFLUENSER</a> - <a href="https://goo.gl/maps/Xd2j42wzSduBuhFz9"> TROMSØVÆRING</a> - POINT GUARD </p> </span>
+  <p><a href="regissør.html">
+    REGISSØR</a> -<br>
+    <a href="klipper.html">KLIPPER -</a><br>
+     <span> (MANUS)FORFATTER </span> - <br>
+    <span>(FILM)FOTOGRAF</span>-<br>
+    <span>GRAFISK DESIGNER - </span><br>
+    <a href="https://www.instagram.com/krister0/">INFLUENSER -</a>  <br>
+     <a href="https://goo.gl/maps/Xd2j42wzSduBuhFz9"> TROMSØVÆRING -</a>  <br>POINT GUARD -</p> </span>
   </div>
- <div class="showr"> <img src="powerpoint.gif.gif" alt="minishowreel" style="width:500px;height:auto;">
- </div>
+
 </body>
 </html>
