--- a/klipper.html
+++ b/klipper.html
@@ -2,91 +2,11 @@
 <HTML>
 <head> 
     <Title> Klipper</Title>
+    <link rel="stylesheet" href="./main.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Krister Hammer Andersen">
 <style>
-    body {margin: 0;
-    background-color: #000000}
-    span.body {font-kerning: none;font: 13.0px 'helvetica'; color: #ffff}
-  span.fagfunk {font: 11.0px 'Helvetica'; font-kerning: none; color: #ffff}
-  span.tittel {font-kerning: none;font: 40.0px 'HELVETICA'; color: #ffff; margin-left: 10%; margin-top: 10px;}
-  span.kontakt {font-kerning: none;font: 12.0px 'HELVETICA'; color: #ffff; position: relative; top: 20px; left: 50%;}
 
-  a:link {
-    color: white;
-    background-color: transparent;
-    text-decoration: none;
-  }
-  a:visited {
-    color: white;
-    background-color: transparent;
-    text-decoration: none;
-  }
-  a:hover {
-    color: orange;
-    background-color: transparent;
-    text-decoration: underline;
-  }
-  a:active {
-    color: pink;
-    background-color: transparent;
-    text-decoration: underline;
-  }
-  .meny {
-  position: relative;
-  top: 0px;
-  left: 25%;
-  }
-
-  .Satsbrødtekst {
-  position: absolute;
-  top: 860px;
-  left: 50px;
-  text-align: left;
-  }
-
- .satsnorge1 {
-    position: absolute;
-    top: 850px;
-    left: 350px;
-    }
-    .satssverige1 {
-    position: absolute;
-    top: 850px;
-    left: 750px;
-    }
-
-    .satsnorgehighlight {
-      position: absolute;
-      top: 850px;
-      left: 1150px;
-      }
-      .satssverigehighlight {
-      position: absolute;
-      top: 850px;
-      left: 1550px;
-      }
-      .IKEAbrødtekst {
-  position: Relative;
-  top: 750px;
-  left: 50px;
-  text-align: left;
-  }
-    .IKEA17 {
-      position: relative;
-      top: 650px;
-      left: 320px;
-      }
-
-      .houseedit {
-      position: relative;
-      top: 720px;
-      left: 320px;
-      }
-      .housebrødtekst {
-  position: Relative;
-  top: 750px;
-  left: 50px;
-  text-align: left;
-  }
 
 </style>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -95,58 +15,56 @@
 <body>
     <h3><span class="kontakt">KRISTER.H.ANDERSEN@GMAIL.COM </span></h3>
     <h1><span class="tittel"><a href="index.html">KRISTER <br>HAMMER ANDERSEN</a></span></h1>
+
     <div class="meny"><span class="body">
-        <p><a href="regissør.html">REGISSØR</a> - <a href="forfatter.html"> (MANUS)FORFATTER </a> - <a href="klipper.html">KLIPPER</a> - <a href="fotograf.html">(FILM)FOTOGRAF</a> - <a>GRAFISK DESIGNER</a> - <a href="https://www.instagram.com/krister0/">INFLUENSER</a> - TROMSØVÆRING - POINT GUARD </p> </span>
-        </div>
+      <p><a href="regissør.html">
+        REGISSØR -</a> <br>
+        <span>KLIPPER -</span><br>
+         <span> (MANUS)FORFATTER -</span><br>
+        <span>(FILM)FOTOGRAF -</span><br>
+        <span>GRAFISK DESIGNER -</span><br>
+        <a href="https://www.instagram.com/krister0/">INFLUENSER -</a><br>
+        <a href="https://goo.gl/maps/Xd2j42wzSduBuhFz9"> TROMSØVÆRING -</a> <br> POINT GUARD -</p> </span>
+      </div>
+    
 
-        <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/887038468?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" style="position:absolute;top:0;left:0;width:60%;height:60%;" title="Bream à Paris"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+          <div class="video-container">
+            <iframe src="https://player.vimeo.com/video/1031172167" 
+        title="Vimeo video player" frameborder="0" 
+        allow="fullscreen; picture-in-picture" allowfullscreen></iframe>
+        <p class="video-description">Reklame for Dale of Norway's gensere til ski-VM i Trondheim</p>
+        </div>
+        &nbsp;
+        &nbsp;
+        &nbsp;
+        <div class="video-container">
+          <iframe src="https://player.vimeo.com/video/887038468?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" 
+      title="Vimeo video player" frameborder="0" 
+      allow="fullscreen; picture-in-picture" allowfullscreen></iframe>
+      <p class="video-description">Birk og Cameron drar til Paris </p>
+      </div>  
 
+      &nbsp;
+      &nbsp;
+      &nbsp;
 
-       <div class="Satsbrødtekst"> <span class="body"><p><b>2/10 episoder fra SATS PT-kampanje <br>
-        + utdrag til SoMe(2023)</b>
-        <br> Kreatør: Ole-Jacob Steen-Hansen <br> Regi: Nada Bojic <br> Prod: Mari Paus & Ida Hindrum  <br> Grafikk: Andreas Aas <br> Klipp: Krister Hammer Andersen <br> Byrå: TRY Film <br> Resten av serien kan sees på <a href="https://www.instagram.com/p/Cv9LrIJq1dl/"> SATS' Instagram</a>
-        </p></span></div>
-        <div class="satsnorge1">
-          <video width="316" height="615" controls>
-            <source src="SATS_12_Uker_EP1_IG_NO.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-          </video>
-        </div>
-        <div class="satssverige1">
-          <video width="316" height="615" controls>
-            <source src="SATS_12_Uker_EP1_IG_SE_MASTER.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-          </video>
-        </div>
-        <div class="satsnorgehighlight">
-          <video width="316" height="615" controls>
-            <source src="SATS_Highlight_HowMyPTMotivatesMer_9x16_27sek_H264_MASTER (1).mp4" type="video/mp4">
-          Your browser does not support the video tag.
-          </video>
-        </div>
-
-        <div class="satssverigehighlight">
-          <video width="316" height="615" controls>
-            <source src="Sats_Dypdykk_Highlight_HowMyPTMotivatesMe_IG_SE_MASTER.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-          </video>
-        </div>
-<div class="IKEAbrødtekst"> <span class="body"><p> <b>IKEA 17. mai (2023)</b>
-  <br> Produsent: Andreas Falk Luksepp <br> Foto: Marius Vesteraa & Morten Engelien <br>Klipp og grafikk: Krister Hammer Andersen <br> Byrå: TRY Film</p></span></div>
- <div class="IKEA17">
-<video width="615" height="316" controls>
-<source src="17_mai_IKEA_v3_16x9_Online.mp4" type="video/mp4">
-   Your browser does not support the video tag.
-</video>
- </div>
- <div class="IKEAbrødtekst"> <span class="body"><p> <b>Privat (2023)</b>
-</span></div>
- <div class="houseedit">
-  <video width="615" height="316" controls>
+      <div class="video-container">
+        <iframe src="https://player.vimeo.com/video/1063295561?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" 
+    title="Vimeo video player" frameborder="0" 
+    allow="fullscreen; picture-in-picture" allowfullscreen></iframe>
+    <p class="video-description">Battle Royale for <a href="http://null47.no">NULL47 </a> </p>
+    </div>
+      &nbsp;
+      &nbsp;
+      &nbsp;
+      <div class="video-container">
+  <video width="560" controls>
   <source src="house 2022_16x9lowqual.mp4" type="video/mp4">
      Your browser does not support the video tag.
   </video>
-   </div>
+  <p class="video-description"> Klippelek </p>
+</div>  
+
 
 </body>
     </html>
