--- a/index.html
+++ b/index.html
@@ -14,14 +14,22 @@
 
 
 <div class="meny"><span class="body">
-  <p><a href="regissør.html">
-    REGISSØR</a> -<br>
-    <a href="klipper.html">KLIPPER -</a><br>
-     <span> (MANUS)FORFATTER </span> - <br>
-    <span>(FILM)FOTOGRAF</span>-<br>
-    <span>GRAFISK DESIGNER - </span><br>
-    <a href="https://www.instagram.com/krister0/">INFLUENSER -</a>  <br>
-     <a href="https://goo.gl/maps/Xd2j42wzSduBuhFz9"> TROMSØVÆRING -</a>  <br>POINT GUARD -</p> </span>
+  <p><a href="regissør.html">REGISSØR</a><br>
+    <a href="klipper.html">KLIPPER</a><br>
+     <span> (MANUS)FORFATTER </span> <br>
+    <span>(FILM)FOTOGRAF</span><br>
+    <span>GRAFISK DESIGNER </span><br>
+    <a href="https://www.instagram.com/krister0/">INFLUENSER</a><br>
+    <a href="https://goo.gl/maps/Xd2j42wzSduBuhFz9"> TROMSØVÆRING</a><br>POINT GUARD<br>
+    <a href="index.html">NETTSIDEBYGGER</a><br>
+    <span>PROD.ASS</span><br>
+    <span>SAME </span><br>
+    <span>FILANTROP </span><br>
+    <span>NØTTEALLERGIKER</span><br>
+    <span> </span><br>
+
+  </p>
+  </span>
   </div>
 
 </body>
