--- a/klipper.html
+++ b/klipper.html
@@ -17,14 +17,18 @@
     <h1><span class="tittel"><a href="index.html">KRISTER <br>HAMMER ANDERSEN</a></span></h1>
 
     <div class="meny"><span class="body">
-      <p><a href="regissør.html">
-        REGISSØR -</a> <br>
-        <span>KLIPPER -</span><br>
-         <span> (MANUS)FORFATTER -</span><br>
-        <span>(FILM)FOTOGRAF -</span><br>
-        <span>GRAFISK DESIGNER -</span><br>
-        <a href="https://www.instagram.com/krister0/">INFLUENSER -</a><br>
-        <a href="https://goo.gl/maps/Xd2j42wzSduBuhFz9"> TROMSØVÆRING -</a> <br> POINT GUARD -</p> </span>
+      <p><a href="regissør.html">REGISSØR</a><br>
+        <span>KLIPPER</span><br>
+         <span> (MANUS)FORFATTER </span> <br>
+        <span>(FILM)FOTOGRAF</span><br>
+        <span>GRAFISK DESIGNER </span><br>
+        <a href="https://www.instagram.com/krister0/">INFLUENSER</a><br>
+        <a href="https://goo.gl/maps/Xd2j42wzSduBuhFz9"> TROMSØVÆRING</a><br>POINT GUARD<br>
+        <a href="index.html">NETTSIDEBYGGER</a><br>
+        <span>PROD.ASS</span><br>
+        <span>SAME </span><br>
+        <span>FILANTROP </span><br>
+        <span>NØTTEALLERGIKER</span><br>
       </div>
     
 
@@ -49,11 +53,21 @@
       &nbsp;
 
       <div class="video-container">
-        <iframe src="https://player.vimeo.com/video/1063295561?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" 
+        <iframe src="https://player.vimeo.com/video/1063295561?h=ef343ba155&badge=0&autopause=0&player_id=0&app_id=58479"
     title="Vimeo video player" frameborder="0" 
     allow="fullscreen; picture-in-picture" allowfullscreen></iframe>
-    <p class="video-description">Battle Royale for <a href="http://null47.no">NULL47 </a> </p>
+    <p class="video-description">Standup Battle Royale for <a href="http://null47.no">NULL47 </a> </p>
     </div>
+
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    <div class="video-container">
+      <iframe src="https://player.vimeo.com/video/1063851978?h=cb7edf053a&badge=0&autopause=0&player_id=0&app_id=58479"  
+  title="Vimeo video player" frameborder="0" 
+  allow="fullscreen; picture-in-picture" allowfullscreen></iframe>
+  <p class="video-description">Episode 1/8 av Da vi satt inne for <a href="http://null47.no">NULL47 </a> </p>
+  </div>
       &nbsp;
       &nbsp;
       &nbsp;
